Fix the nil click-to-add feature. Now shows in demo.

--- a/demo.html
+++ b/demo.html
@@ -387,13 +387,13 @@ or in the call to .jinplace().
 
   &lt;p>Favourites:
   &lt;div class="editable2" data-type="textarea" data-attribute="favourites"
-      data-nil="Click to add">
+      data-nil="[Click to add]">
   &lt;/div>
 
   &lt;script>
     $('.editable2').jinplace({
       url: '/internal/person2',
-      nil: '[Click]'
+      nil: '[Edit]'
     });
   &lt;/script>
 </div>
@@ -434,7 +434,7 @@ text version, but display the html version of the page.
 
   &lt;p>Favourites:
   &lt;div class="editable2" data-type="textarea" data-attribute="favourites"
-      data-nil="Click to add">
+      data-nil="[Click to add]">
   &lt;/div>
 
   &lt;script>
