Make the field editors plugable. The editors now have a proper api and implementing it properly fixed a couple of bugs with select lists. They should now pick up the correct value from passed in data rather than always for the existing element text.

--- a/demo.html
+++ b/demo.html
@@ -511,12 +511,17 @@ $(function() {
       db[object][field](value);
 
     } else {
+      value = db[object][field]();
+
       if (field == 'direction') {
-        var dir = $.extend({}, db.allowedDirections);
-        dir.selected = db[object][field]();
+        var dir = $.extend(true, [], db.allowedDirections);
+        $.each(dir, function(i, opt) {
+          if (opt[0] == value) {
+            opt[2] = 1;
+          }
+        });
         value = JSON.stringify(dir);
-      } else {
-        value = db[object][field]();
+        console.log("choices", value);
       }
     }
 
