Documentation. First complete revision of the documentation.
This will mainly be hosted at bitbucket using
their wiki.

--- a/demo.html
+++ b/demo.html
@@ -326,7 +326,7 @@ to lose a lot of work it you accidentally lose focus.</p>
        data-type="textarea"
        data-ok-button="OK"
        data-cancel-button="Cancel">
-    Silver white winters that melt into springs
+    Wild geese that fly with the moon on their wings
   &lt;/div>
 
 </div>
