Added examples to the attribute doc. Give a title to the demo file. Add bugs line to the .jquery.json file so that the tracker will show up in the plugins site.

--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Demo for jinplace</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -160,7 +161,7 @@ input.short {
 <body>
 <div id="page">
 
-<h1>A demo and test of the jinplace jquery plugin</h1>
+<h1>Demo of the jinplace jquery plugin</h1>
 <div id="invalid" class="warn">
   Error: Something has gone wrong and at least one of the required javascript libraries has not loaded.
   Please check this before going further.
