Add links to the demo. So there is a way out when seeing it on the website.

--- a/demo.html
+++ b/demo.html
@@ -120,6 +120,7 @@ input.short {
   margin: 0 0 0 3px;
   border: solid 1px #eee;
   color: #000000;
+  font-weight: bold;
   background: #98b095;
   text-decoration: none;
   cursor: pointer;
@@ -181,7 +182,9 @@ As you work through the examples and make changes they will appear in
 the table below.
 </p>
 </div>
-
+<div style="float:left; margin-right: 20px;">
+  <p>See also <a class="button" href="https://bitbucket.org/itinken/jinplace/wiki/Documentation">Documentation</a> and <a class="button" href="https://bitbucket.org/itinken/jinplace/downloads">Downloads</a></p>
+</div>
 <table>
 <caption>The database. See your changes here.</caption>
 <tr>
@@ -459,6 +462,11 @@ You can view the results of your edits in the person2 row at the top
 of this page.</p>
 </div>
 
+</div>
+
+<div style="float:left; margin-right: 20px;">
+  <p>See also <a class="button" href="https://bitbucket.org/itinken/jinplace/wiki/Documentation">Documentation</a> and
+    <a class="button" href="https://bitbucket.org/itinken/jinplace/downloads">Downloads</a></p>
 </div>
 
 <!-- Start of scripts -->
