Add some tests that would have caught the reported bug.

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div id="qunit"></div>
-<div id="qunit-fixture"></div>
+<div id="qunit-fixture">
+    <input id="other">
+</div>
 <script src="qunit.js"></script>
 
 <script>
@@ -41,6 +43,8 @@
 
 <script src="send.js"></script>
 <script src="placeholder.js"></script>
+<script src="text_only.js"></script>
 <script src="buttons.js"></script>
+
 </body>
 </html>
