Protect the submit function from a thrown exception.
If an exception is thrown the edit is cancelled.
Also implemented a cancel when the function just
returns undefined.

Remove test for strict mode. This is just a test
of the browser implementing it properly and on
Android 4 it doesn't work how I expect. Thats nothing
to do with our code though.

--- a/tests/index.html
+++ b/tests/index.html
@@ -22,6 +22,13 @@
     var ajax_url = '';
     var ajax_data = {};
 
+    if (!window.console) {
+        var console = {
+            /** @param {...*} var_args */
+            log: function(var_args) {}
+        }
+    }
+
     // sync mock up of the ajax call.
     $.ajax = function(url, opts) {
         console.log('AJAX', url, opts.data);
