JIN-32 Focus text areas.
Plus add tests to catch future ocurrances of the error.

--- a/tests/index.html
+++ b/tests/index.html
@@ -57,6 +57,7 @@
 <script src="placeholder.js"></script>
 <script src="text_only.js"></script>
 <script src="buttons.js"></script>
+<script src="focus.js"></script>
 
 </body>
 </html>
