JIN-37 Opera and IE focus test failures. This is the fix for IE. Make sure that we move the focus outside of the fixture area before starting the test.

--- a/tests/index.html
+++ b/tests/index.html
@@ -59,5 +59,12 @@
 <script src="buttons.js"></script>
 <script src="focus.js"></script>
 
+<!-- Used to work around a suspected IE(<8) bug. When focus is inside the fixture div when it is removed
+   - and replaced, then focus doesn't always get set. (Seems to fail every other time..).
+   - This input exists so that focus can be set outside the fixture as part of setup or teardown.
+ -->
+<!--suppress HtmlFormInputWithoutLabel -->
+<input id="outside" style="position:absolute;left:-1000px">
+
 </body>
 </html>
