Fix demo to emulate server returning select value.
Return the select text and not the option value.

--- a/demo.html
+++ b/demo.html
@@ -535,6 +535,13 @@ $(function() {
       // set the database value
       db[object][field](value);
 
+      if (field == 'direction') {
+        $.each(db.allowedDirections, function(i, opt) {
+          if (opt[0] == value)
+            value = opt[1];
+        });
+      }
+
     } else {
       value = db[object][field]();
 
