Trigger an event when the replacement has been done and before the rebind is done.

--- a/tests/index.html
+++ b/tests/index.html
@@ -75,6 +75,7 @@
 <script src="text_only.js"></script>
 <script src="buttons.js"></script>
 <script src="focus.js"></script>
+<script src="events.js"></script>
 
 <!-- Used to work around a suspected IE(<8) bug. When focus is inside the fixture div when it is removed
    - and replaced, then focus doesn't always get set. (Seems to fail every other time..).
