The database panel is now fixed at the top of the screen.

--- a/demo.html
+++ b/demo.html
@@ -185,6 +185,8 @@ input.short {
 <div style="float:left; margin-right: 20px;">
   <p>See also <a class="button" href="https://bitbucket.org/itinken/jinplace/wiki/Documentation">Documentation</a> and <a class="button" href="https://bitbucket.org/itinken/jinplace/downloads">Downloads</a></p>
 </div>
+<div style="position: fixed; top:0; right:0;z-index:999; padding:10px;
+	background:#eee;border:#888 solid 1px;">
 <table>
 <caption>The database. See your changes here.</caption>
 <tr>
@@ -209,6 +211,7 @@ input.short {
   <td><span data-bind="text: person2.direction"></span>
 </tr>
 </table>
+</div>
 <p>
 
 <div id="example-input" class="demo">
