The wiki now serves css files as text/plain so have to use jinplace.org instead.

--- a/demo.html
+++ b/demo.html
@@ -12,8 +12,8 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJScript.min.js"></script>
 
-<link rel=stylesheet href="http://bitbucket.com/itinken/jinplace/wiki/css/shCore.css">
-<link rel=stylesheet href="http://bitbucket.com/itinken/jinplace/wiki/css/shCoreDefault.css">
+<link rel=stylesheet href="http://jinplace.org/css/shCore.css">
+<link rel=stylesheet href="http://jinplace.org/css/shCoreDefault.css">
 
 <!-- These are the required files. Need nQuery 1.7+ -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
