Add a jinplace:fail event so that error handling can be done.
This is called after the input has been removed and the text
restored.

--- a/tests/index.html
+++ b/tests/index.html
@@ -37,6 +37,8 @@
       }
     };
 
+    $.orig_ajax = $.ajax;
+
     // sync mock up of the ajax call.
     $.ajax = function(url, opts) {
       console.log('AJAX', url, opts.data);
